editted the plot

--- a/New_Sims_Analysis/calculate_pattern_speed_b4_N.ipynb
+++ b/New_Sims_Analysis/calculate_pattern_speed_b4_N.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import numpy as np \n",
     "import pickle\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "datapath=\"/mnt/home/bbhattarai/B3-N/\"\n",
     "#freq_datapath=\"/mnt/home/bbhattarai/freq_data/\""
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "source": [
     "angle_datapath=\"/mnt/home/bbhattarai/resonance_sweeping/New_Sims_Analysis/\"\n",
     "datafilename=\"0_to_720_B3-N_saved_barangles_combined.ang\"\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "source": [
     "times=np.genfromtxt(datapath+'times.txt',dtype='str')\n",
     "#print(len(times))\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
     "fig1=plt.figure()\n",
     "ax=fig1.add_subplot(111)\n",
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
     "#converted all angles to positive\n",
     "a=np.array(all_bangles)\n",
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "source": [
     "dadt=list()\n",
     "da=list()\n",
@@ -1753,11 +1753,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15554021cf28>]"
+       "[<matplotlib.lines.Line2D at 0x1555404ad0b8>]"
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 8
     },
     {
      "output_type": "display_data",
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "source": [
     "#import matplotlib\n",
     "#from matplotlib.ticker import FuncFormatter, MultipleLocator\n",
@@ -1825,6 +1825,56 @@
      }
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Using Interpolation to fix those spikes:\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "dadt_interploated=list()\n",
+    "da_interploated=list()\n",
+    "for i in range(1,len(t),1):\n",
+    "    #d=(a[i-1]-a[i])/(t[i-1]-t[i])\n",
+    "    d_a_interpolated=(a[i]-a[i-1])\n",
+    "    print(\"%f - %f = %f\"%(a[i],a[i-1],d_a_interpolated))\n",
+    "    dt_interploated=(t[i]-t[i-1])\n",
+    "    if d_a_interpolated<0:\n",
+    "        print(\"da_interploated <0 found\")\n",
+    "        d_a_interpolated=a[i]+(360-a[i-1])  #if change in angle is negative, it is due to crossing the origin\n",
+    "        print(\"da_interploated is now\",d_a_interpolated)\n",
+    "    if d_a_interpolated>180:                #if change in angle is greater than 180, the change in angle value we have is flipped by 180\n",
+    "        print(\"d_a_interpolated > 180 found\")\n",
+    "        #d_a_interpolated=d_a_interpolated-180\n",
+    "        d_a_interpolated=np.NaN\n",
+    "        print(\"da_interploated is now: \",d_a_interpolated)    \n",
+    "    da_interploated.append(d_a_interpolated)\n",
+    "    #print(d_a_interpolated)\n",
+    "    d_a_interpolated_rad=np.deg2rad(d_a_interpolated)\n",
+    "    d=d_a_interpolated_rad/dadt_interploated\n",
+    "    dadt_interploated.append(d)\n",
+    "\n",
+    "dadt_interploated=np.array(dadt_interploated)\n",
+    "\n",
+    "zero=np.array([0])\n",
+    "dadt_interploatedz=np.concatenate((zero,dadt_interploated))\n",
+    "#print(len(dadt_interploated))\n",
+    "#print(dadt_interploated)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
