figured out proper way of doing frequencies

--- a/New_Sims_Analysis/calculate_frequencies_700_B3-N_cyl_outdate.ipynb
+++ b/New_Sims_Analysis/calculate_frequencies_700_B3-N_cyl_outdate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "#!cp ../rmcclure/procedure.py ."
    ],
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "import numpy as np \n",
     "import pickle\n",
@@ -26,12 +26,24 @@
     "from procedure import *\n",
     "import pandas as pd"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "/mnt/home/bbhattarai/.local/lib/python3.7/site-packages/galpy/util/bovy_coords.py:6: FutureWarning: galpy.util.bovy_coords is being deprecated in favor of galpy.util.coords; all functions in there are the same; please switch to the new import, because the old import will be removed in v1.9\n",
+      "  warnings.warn('galpy.util.bovy_coords is being deprecated in favor of galpy.util.coords; all functions in there are the same; please switch to the new import, because the old import will be removed in v1.9',FutureWarning)\n",
+      "\n",
+      "start at: 2021-08-04 10:22:39.087752\n",
+      "end at: 2021-08-04 10:22:39.089202\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "!pwd"
    ],
@@ -48,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "times=np.genfromtxt(path+'times.txt',dtype='str')\n",
     "print(\"Total snapshots present is\",len(times))\n",
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "source": [
     "!hostname"
    ],
@@ -85,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "source": [
     "plotpath=\"/mnt/home/bbhattarai/resonance_sweeping/New_Sims_Analysis/plots/\""
    ],
@@ -94,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
     "snapshot=1000\n",
     "snaparr = loadwholesnap(path,snapshot)\n",
@@ -127,13 +139,6 @@
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   },
   {
@@ -199,6 +204,7 @@
     "        z_test=test['zz'].astype(np.float64)\n",
     "        vx_test=test['vr'].astype(np.float64)\n",
     "        vy_test=test['vphi'].astype(np.float64)\n",
+    "        \n",
     "        vz_test=test['vzz'].astype(np.float64)\n",
     "        mass_test=test['mass'].astype(np.float64)\n",
     "        r_test=test['r'].astype(np.float64)\n",
@@ -402,7 +408,7 @@
     "    #ax.set_xlim(0,2)\n",
     "    ax.set_ylabel(r\"Frequency\")\n",
     "    plotname=\"particle_\"+str(i)+\"_freqs_over_time_200Myr_range_without_pp_abs_cycl.jpg\"\n",
-    "    fig1.savefig(plotpath+plotname,bbox_inches=\"tight\",dpi=300)\n",
+    "    fig1.savefig(plotpath+plotname,bbox_inches=\"tight\",dpi=150)\n",
     "    print(\"Plot generated and saved to file: \",plotname)\n",
     "    #plt.show()"
    ],
