--- a/New_Sims_Analysis/calculate_frequencies_B3-N_ovl_windows.ipynb
+++ b/New_Sims_Analysis/calculate_frequencies_B3-N_ovl_windows.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "source": [
     "import numpy as np \n",
     "import pickle\n",
@@ -26,7 +26,19 @@
     "from procedure import *\n",
     "import pandas as pd"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "/mnt/home/bbhattarai/.local/lib/python3.7/site-packages/galpy/util/bovy_coords.py:6: FutureWarning: galpy.util.bovy_coords is being deprecated in favor of galpy.util.coords; all functions in there are the same; please switch to the new import, because the old import will be removed in v1.9\n",
+      "  warnings.warn('galpy.util.bovy_coords is being deprecated in favor of galpy.util.coords; all functions in there are the same; please switch to the new import, because the old import will be removed in v1.9',FutureWarning)\n",
+      "\n",
+      "start at: 2021-08-05 07:52:47.275862\n",
+      "end at: 2021-08-05 07:52:47.277310\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "source": [
     "!hostname"
    ],
@@ -77,7 +89,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "pcn-9-38\n"
+      "pcn-9-59\n"
      ]
     }
    ],
