--- a/New_Sims_Analysis/1000_B3N_frequency_analysis.ipynb
+++ b/New_Sims_Analysis/1000_B3N_frequency_analysis.ipynb
@@ -23,8 +23,8 @@
       "  warnings.warn('galpy.util.bovy_coords is being deprecated in favor of galpy.util.coords; all functions in there are the same; please switch to the new import, because the old import will be removed in v1.9',FutureWarning)\n",
       "\n",
       "PLEASE IMPORT superfreq: pip install --user git+https://github.com/adrn/superfreq\n",
-      "start at: 2021-08-08 21:37:45.220982\n",
-      "end at: 2021-08-08 21:37:45.221413\n"
+      "start at: 2021-08-11 04:41:06.807837\n",
+      "end at: 2021-08-11 04:41:06.808604\n"
      ]
     }
    ],
@@ -417,7 +417,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2798\n"
+      "5059\n"
      ]
     }
    ],
@@ -532,7 +532,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "12692\n"
+      "22181\n"
      ]
     }
    ],
@@ -1158,7 +1158,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2798\n"
+      "5059\n"
      ]
     }
    ],
@@ -1197,7 +1197,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2798\n"
+      "5059\n"
      ]
     }
    ],
@@ -1215,8 +1215,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "12692\n",
-      "12692\n"
+      "22181\n",
+      "22181\n"
      ]
     }
    ],
@@ -1231,7 +1231,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
+   "source": [
+    "fig2=plt.figure()\n",
+    "ax=fig2.add_subplot(111)\n",
+    "#ax.text(8,300,r\"Snapshot %s, Slice: -5<$\\phi$<5\"%(str(snapshot)))\n",
+    "#cb1=ax.hexbin(x_select,y_select,extent=((-35,35,-35,35)),gridsize=500,mincnt=1,C=Ordisk,vmin=1,vmax=40)\n",
+    "cb1=ax.hexbin(x_select,y_select,extent=((-35,35,-35,35)),gridsize=500,mincnt=1,bins='log')\n",
+    "#ax.scatter(x_700_olr,y_700_olr,c=\"red\",marker=\".\",s=0.01,label=\"OLR at 700\")\n",
+    "#ax.scatter(x_1000_olr,y_1000_olr,c=\"yellow\",marker=\".\",s=0.01,label=\"OLR at \"+str(snapshot))\n",
+    "ax.scatter(x_700,y_700,c=\"orange\",marker=\".\",s=0.1,label=\"CR at 700\")\n",
+    "#ax.scatter(x_1000,y_1000,c=\"black\",marker=\".\",s=0.1,label=\"CR at \"+str(snapshot))\n",
+    "ax.set_xlabel(\"x\")\n",
+    "ax.set_ylabel(\"y\")\n",
+    "ax.legend(bbox_to_anchor=(1.13,0.93), loc='center left',markerscale=15)\n",
+    "ax.text(11,30,r\"Snapshot \"+str(snapshot)+\" (B3-N)\")\n",
+    "#ax.set_xlim(7.5,8.5)\n",
+    "#ax.set_ylim(-0.5,0.5)\n",
+    "cbar_ax = fig2.add_axes([0.91, 0.12, 0.03, 0.76]) # position of the colorbar (left, bottom, width, height)\n",
+    "fig2.colorbar(cb1, cax=cbar_ax)\n",
+    "cbar_ax.set_ylabel(r'n$_{star}$')\n",
+    "cbar_ax.yaxis.label.set_size(10)\n",
+    "plotname=str(snapshot)+\"B3-N_y_vs_x_with_CR_resonance_regions_before.jpg\"\n",
+    "fig2.savefig(plotpath+plotname,bbox_inches=\"tight\",dpi=250)\n",
+    "print(\"Plot generated and saved to file: \",plotname)\n",
+    "plt.close()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "fig2_1=plt.figure()\n",
+    "ax=fig2_1.add_subplot(111)\n",
+    "#ax.text(8,300,r\"Snapshot %s, Slice: -5<$\\phi$<5\"%(str(snapshot)))\n",
+    "#cb1=ax.hexbin(x_select,y_select,extent=((-35,35,-35,35)),gridsize=500,mincnt=1,C=Ordisk,vmin=1,vmax=40)\n",
+    "cb1=ax.hexbin(x_select,y_select,extent=((-35,35,-35,35)),gridsize=500,mincnt=1,bins='log')\n",
+    "ax.scatter(x_700_olr,y_700_olr,c=\"red\",marker=\".\",s=0.01,label=\"OLR at 700\")\n",
+    "ax.scatter(x_1000_olr,y_1000_olr,c=\"yellow\",marker=\".\",s=0.01,label=\"OLR at \"+str(snapshot))\n",
+    "#ax.scatter(x_700,y_700,c=\"orange\",marker=\".\",s=0.1,label=\"CR at 700\")\n",
+    "#ax.scatter(x_1000,y_1000,c=\"black\",marker=\".\",s=0.1,label=\"CR at \"+str(snapshot))\n",
+    "ax.set_xlabel(\"x\")\n",
+    "ax.set_ylabel(\"y\")\n",
+    "ax.legend(bbox_to_anchor=(1.13,0.93), loc='center left',markerscale=15)\n",
+    "ax.text(11,30,r\"Snapshot \"+str(snapshot)+\" (B3-N)\")\n",
+    "#ax.set_xlim(7.5,8.5)\n",
+    "#ax.set_ylim(-0.5,0.5)\n",
+    "cbar_ax = fig2_1.add_axes([0.91, 0.12, 0.03, 0.76]) # position of the colorbar (left, bottom, width, height)\n",
+    "fig2_1.colorbar(cb1, cax=cbar_ax)\n",
+    "cbar_ax.set_ylabel(r'n$_{star}$')\n",
+    "cbar_ax.yaxis.label.set_size(10)\n",
+    "plotname=str(snapshot)+\"B3-N_y_vs_x_with_OLR_resonance_regions_before_after.jpg\"\n",
+    "fig2_1.savefig(plotpath+plotname,bbox_inches=\"tight\",dpi=250)\n",
+    "print(\"Plot generated and saved to file: \",plotname)\n",
+    "plt.close()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "fig2_1=plt.figure()\n",
+    "ax=fig2_1.add_subplot(111)\n",
+    "#ax.text(8,300,r\"Snapshot %s, Slice: -5<$\\phi$<5\"%(str(snapshot)))\n",
+    "#cb1=ax.hexbin(x_select,y_select,extent=((-35,35,-35,35)),gridsize=500,mincnt=1,C=Ordisk,vmin=1,vmax=40)\n",
+    "cb1=ax.hexbin(x_select,y_select,extent=((-35,35,-35,35)),gridsize=500,mincnt=1,bins='log')\n",
+    "ax.scatter(x_700_olr,y_700_olr,c=\"red\",marker=\".\",s=0.01,label=\"OLR at 700\")\n",
+    "#ax.scatter(x_1000_olr,y_1000_olr,c=\"yellow\",marker=\".\",s=0.01,label=\"OLR at \"+str(snapshot))\n",
+    "#ax.scatter(x_700,y_700,c=\"orange\",marker=\".\",s=0.1,label=\"CR at 700\")\n",
+    "#ax.scatter(x_1000,y_1000,c=\"black\",marker=\".\",s=0.1,label=\"CR at \"+str(snapshot))\n",
+    "ax.set_xlabel(\"x\")\n",
+    "ax.set_ylabel(\"y\")\n",
+    "ax.legend(bbox_to_anchor=(1.13,0.93), loc='center left',markerscale=15)\n",
+    "ax.text(11,30,r\"Snapshot \"+str(snapshot)+\" (B3-N)\")\n",
+    "#ax.set_xlim(7.5,8.5)\n",
+    "#ax.set_ylim(-0.5,0.5)\n",
+    "cbar_ax = fig2_1.add_axes([0.91, 0.12, 0.03, 0.76]) # position of the colorbar (left, bottom, width, height)\n",
+    "fig2_1.colorbar(cb1, cax=cbar_ax)\n",
+    "cbar_ax.set_ylabel(r'n$_{star}$')\n",
+    "cbar_ax.yaxis.label.set_size(10)\n",
+    "plotname=str(snapshot)+\"B3-N_y_vs_x_with_OLR_resonance_before.jpg\"\n",
+    "fig2_1.savefig(plotpath+plotname,bbox_inches=\"tight\",dpi=250)\n",
+    "print(\"Plot generated and saved to file: \",plotname)\n",
+    "plt.close()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "source": [
     "fig3=plt.figure()\n",
     "ax=fig3.add_subplot(111)\n",
@@ -1244,7 +1337,7 @@
     "ax.scatter(x_1000,y_1000,c=\"black\",marker=\".\",s=0.1,label=\"CR at \"+str(snapshot))\n",
     "ax.set_xlabel(\"x\")\n",
     "ax.set_ylabel(\"y\")\n",
-    "ax.legend(bbox_to_anchor=(1.13,0.93), loc='center left',markerscale=9)\n",
+    "ax.legend(bbox_to_anchor=(1.13,0.93), loc='center left',markerscale=11)\n",
     "ax.text(11,30,r\"Snapshot \"+str(snapshot)+\" (B3-N)\")\n",
     "#ax.set_xlim(7.5,8.5)\n",
     "#ax.set_ylim(-0.5,0.5)\n",
